# dross

./: .gitignore  CMakeLists.txt  README.md
include/dross/type/: array.h  data.h  dictionary.h  error.h  number.h  string.h  value.h
src/: CMakeLists.txt
src/type/: array.cpp  data.cpp  dictionary.cpp  error.cpp  number.cpp  string.cpp  value.cpp
test/: CMakeLists.txt
test/type/: test_array.cpp  test_number.cpp  test_string.cpp  test_value.cpp
